--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,4 +138,5 @@
     <string name="lbl_sub_task">Sub-Tasks</string>
     <string name="show_completed">SHOW COMPLETE</string>
     <string name="expand_collapse_button_description">Expand Task Card</string>
+    <string name="task_copied_to_clipboard_message">Task Copied!</string>
 </resources>
